started adding some style

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./css/master.css">
 </head>
 <body>
+    <section>
+        <div class="container">
+            <header><h1>FizzBuzzDOM</h1></header>
+        </div>
+    </section>
     <script src="./js/master.js"></script>
 </body>
 </html>
