now ''Fizz-Buzz" is displayed in a orange box

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <div class="container">
             <header><h1>FizzBuzzDOM</h1></header>
         </div>
+        <div id="container-big" class="container-big">
+
+        </div>
     </section>
     <script src="./js/master.js"></script>
 </body>
